# todo-list-cpp

./: .clangd  .gitignore  CMakeLists.txt  README.md
include/: normal-header.h  operations.h  task-list.h
ref/: cereal-on-map.cpp  created-order-map.cpp  getline.cpp  json-to-yaml.cpp  map.cpp  ordered-map.cpp  vector.cpp
src/: TaskList.h  main.cpp  main.old.cpp  my-order.json  my-todo-list.json  operations.cpp  session  task-list.cpp
tem/: main.cpp  task-list.cpp  task-list.h
